--- a/index.html
+++ b/index.html
@@ -10,10 +10,66 @@
     <!-- Custom css attached here -->
     <link rel="stylesheet" href="style.css">
 
-    <title>CoffeeJar</title>
+    <title>CAFENA</title>
 </head>
 <body>
-    
+    <!-- header section  -->
+    <header>
+        <a href="#"><img src="src/logo.png" ></a>
+        <nav class="nav">
+            <a href="#Home">Home</a>
+            <a href="#About">About</a>
+            <a href="#Menu">Menu</a>
+            <a href="#Products">Products</a>
+            <a href="#Review">Review</a>
+            <a href="#Contact">Contact</a>
+            <a href="#Blogs">Blogs</a>
+        </nav>
+        <div class="icons">
+        <i class="fas fa-search" id="searchBtn"></i>
+        <i class="fas fa-shopping-cart" id="cartBtn"></i>
+        <i class="fas fa-bars" id="menuBtn"></i>
+        </div>
+        <div class="search-form">
+       <input type="search" id="search-box" placeholder="Search here...">
+        <label for="search-box" class="fas fa-search"></label>
+        </div>
+        <div class="cart-items-container">
+            <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="src/cart-item-1.png" >
+            <div class="content">
+                <h3>cart item 01</h3>
+                <div class="price">$15.99</div>
+            </div>
+            </div>
+            <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="src/cart-item-2.png" >
+            <div class="content">
+                <h3>cart item 02</h3>
+                <div class="price">$15.99</div>
+            </div>
+            </div>
+            <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="src/cart-item-3.png" >
+            <div class="content">
+                <h3>cart item 03</h3>
+                <div class="price">$15.99</div>
+            </div>
+            </div>
+            <div class="cart-item">
+            <span class="fas fa-times"></span>
+            <img src="src/cart-item-4.png" >
+            <div class="content">
+                <h3>cart item 04</h3>
+                <div class="price">$15.99</div>
+            </div>
+            </div>
+            <a href="#" class="btn">checkout now</a>
+        </div>
+    </header>
 
     <!-- Custom js file attached here -->
     <script src="app.js"></script>
