Header section done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- header section  -->
     <header>
         <a href="#"><img src="src/logo.png" ></a>
-        <nav class="nav">
+        <div class="nav">
             <a href="#Home">Home</a>
             <a href="#About">About</a>
             <a href="#Menu">Menu</a>
@@ -24,11 +24,11 @@
             <a href="#Review">Review</a>
             <a href="#Contact">Contact</a>
             <a href="#Blogs">Blogs</a>
-        </nav>
+        </div>
         <div class="icons">
-        <i class="fas fa-search" id="searchBtn"></i>
-        <i class="fas fa-shopping-cart" id="cartBtn"></i>
-        <i class="fas fa-bars" id="menuBtn"></i>
+        <div class="fas fa-search" id="searchBtn"></div>
+        <div class="fas fa-shopping-cart" id="cartBtn"></div>
+        <div class="fas fa-bars" id="menuBtn"></div>
         </div>
         <div class="search-form">
        <input type="search" id="search-box" placeholder="Search here...">
