Home section done

--- a/index.html
+++ b/index.html
@@ -1,77 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    
+
     <!-- Custom css attached here -->
     <link rel="stylesheet" href="style.css">
 
     <title>CAFENA</title>
 </head>
+
 <body>
     <!-- header section  -->
     <header>
-        <a href="#"><img src="src/logo.png" ></a>
+        <a href="#"><img src="src/logo.png"></a>
         <div class="nav">
-            <a href="#Home">Home</a>
-            <a href="#About">About</a>
-            <a href="#Menu">Menu</a>
-            <a href="#Products">Products</a>
-            <a href="#Review">Review</a>
-            <a href="#Contact">Contact</a>
-            <a href="#Blogs">Blogs</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#products">Products</a>
+            <a href="#review">Review</a>
+            <a href="#contact">Contact</a>
+            <a href="#blogs">Blogs</a>
         </div>
         <div class="icons">
-        <div class="fas fa-search" id="searchBtn"></div>
-        <div class="fas fa-shopping-cart" id="cartBtn"></div>
-        <div class="fas fa-bars" id="menuBtn"></div>
+            <div class="fas fa-search" id="searchBtn"></div>
+            <div class="fas fa-shopping-cart" id="cartBtn"></div>
+            <div class="fas fa-bars" id="menuBtn"></div>
         </div>
         <div class="search-form">
-       <input type="search" id="search-box" placeholder="Search here...">
-        <label for="search-box" class="fas fa-search"></label>
+            <input type="search" id="search-box" placeholder="Search here...">
+            <label for="search-box" class="fas fa-search"></label>
         </div>
         <div class="cart-items-container">
             <div class="cart-item">
-            <span class="fas fa-times"></span>
-            <img src="src/cart-item-1.png" >
-            <div class="content">
-                <h3>cart item 01</h3>
-                <div class="price">$15.99</div>
-            </div>
-            </div>
-            <div class="cart-item">
-            <span class="fas fa-times"></span>
-            <img src="src/cart-item-2.png" >
-            <div class="content">
-                <h3>cart item 02</h3>
-                <div class="price">$15.99</div>
-            </div>
+                <span class="fas fa-times"></span>
+                <img src="src/cart-item-1.png">
+                <div class="content">
+                    <h3>cart item 01</h3>
+                    <div class="price">$15.99</div>
+                </div>
             </div>
             <div class="cart-item">
-            <span class="fas fa-times"></span>
-            <img src="src/cart-item-3.png" >
-            <div class="content">
-                <h3>cart item 03</h3>
-                <div class="price">$15.99</div>
-            </div>
+                <span class="fas fa-times"></span>
+                <img src="src/cart-item-2.png">
+                <div class="content">
+                    <h3>cart item 02</h3>
+                    <div class="price">$15.99</div>
+                </div>
             </div>
             <div class="cart-item">
-            <span class="fas fa-times"></span>
-            <img src="src/cart-item-4.png" >
-            <div class="content">
-                <h3>cart item 04</h3>
-                <div class="price">$15.99</div>
+                <span class="fas fa-times"></span>
+                <img src="src/cart-item-3.png">
+                <div class="content">
+                    <h3>cart item 03</h3>
+                    <div class="price">$15.99</div>
+                </div>
             </div>
+            <div class="cart-item">
+                <span class="fas fa-times"></span>
+                <img src="src/cart-item-4.png">
+                <div class="content">
+                    <h3>cart item 04</h3>
+                    <div class="price">$15.99</div>
+                </div>
             </div>
             <a href="#" class="btn">checkout now</a>
         </div>
     </header>
 
+    <!-- home section  -->
+    <section class="home" id="home">
+        <div class="content">
+            <h3>fresh coffee in the morning</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repellendus quas amet nostrum. Temporibus,
+            iure sed!</p>
+            <a href="#" class="btn btn2">get yours now</a>
+        </div>
+    </section>
+
+
     <!-- Custom js file attached here -->
     <script src="app.js"></script>
 </body>
+
 </html>
