About section completed

--- a/index.html
+++ b/index.html
@@ -77,12 +77,31 @@
     <section class="home" id="home">
         <div class="content">
             <h3>fresh coffee in the morning</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repellendus quas amet nostrum. Temporibus,
-            iure sed!</p>
-            <a href="#" class="btn btn2">get yours now</a>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repellendus quas amet nostrum.
+                Temporibus,
+                iure sed!</p>
+            <a href="#" class="btn">get yours now</a>
         </div>
     </section>
 
+    <!-- about section  -->
+    <section class="about" id="about">
+        <h1 class="heading"><span>about</span> us</h1>
+        <div class="row">
+            <div class="image">
+                <img src="src/about-img.jpeg">
+            </div>
+            <div class="content">
+                <h3>what makes our coffee special ?</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam repellendus quas amet nostrum.
+                    Temporibus,iure sed!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae eos molestias, soluta natus quia,
+                    ab reprehenderit modi dicta cum consequatur, minima veritatis magnam quaerat facilis sint est quas
+                    sit dolorem.</p>
+                <a href="#" class="btn">learn more</a>
+            </div>
+        </div>
+    </section>
 
     <!-- Custom js file attached here -->
     <script src="app.js"></script>
