Menu section completed

--- a/index.html
+++ b/index.html
@@ -103,6 +103,49 @@
         </div>
     </section>
 
+    <!-- menu section  -->
+    <section class="menu" id="menu">
+        <h1 class="heading"><span>our</span> menu</h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="src/menu-1.png" >
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+            <div class="box">
+                <img src="src/menu-2.png" >
+                <h3>tasty and healthy</h3>
+                <div class="price">$18.99 <span>23.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+            <div class="box">
+                <img src="src/menu-3.png" >
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+            <div class="box">
+                <img src="src/menu-4.png" >
+                <h3>tasty and healthy</h3>
+                <div class="price">$18.99 <span>23.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+            <div class="box">
+                <img src="src/menu-5.png" >
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+            <div class="box">
+                <img src="src/menu-6.png" >
+                <h3>tasty and healthy</h3>
+                <div class="price">$18.99 <span>23.99</span></div>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Custom js file attached here -->
     <script src="app.js"></script>
 </body>
