Review section completed

--- a/index.html
+++ b/index.html
@@ -108,37 +108,37 @@
         <h1 class="heading"><span>our</span> menu</h1>
         <div class="box-container">
             <div class="box">
-                <img src="src/menu-1.png" >
+                <img src="src/menu-1.png">
                 <h3>tasty and healthy</h3>
                 <div class="price">$15.99 <span>20.99</span></div>
                 <a href="#" class="btn">add to cart</a>
             </div>
             <div class="box">
-                <img src="src/menu-2.png" >
+                <img src="src/menu-2.png">
                 <h3>tasty and healthy</h3>
                 <div class="price">$18.99 <span>23.99</span></div>
                 <a href="#" class="btn">add to cart</a>
             </div>
             <div class="box">
-                <img src="src/menu-3.png" >
+                <img src="src/menu-3.png">
                 <h3>tasty and healthy</h3>
                 <div class="price">$15.99 <span>20.99</span></div>
                 <a href="#" class="btn">add to cart</a>
             </div>
             <div class="box">
-                <img src="src/menu-4.png" >
+                <img src="src/menu-4.png">
                 <h3>tasty and healthy</h3>
                 <div class="price">$18.99 <span>23.99</span></div>
                 <a href="#" class="btn">add to cart</a>
             </div>
             <div class="box">
-                <img src="src/menu-5.png" >
+                <img src="src/menu-5.png">
                 <h3>tasty and healthy</h3>
                 <div class="price">$15.99 <span>20.99</span></div>
                 <a href="#" class="btn">add to cart</a>
             </div>
             <div class="box">
-                <img src="src/menu-6.png" >
+                <img src="src/menu-6.png">
                 <h3>tasty and healthy</h3>
                 <div class="price">$18.99 <span>23.99</span></div>
                 <a href="#" class="btn">add to cart</a>
@@ -211,6 +211,53 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <div class="price">$15.99 <span>$20.99</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- review section  -->
+    <section class="review" id="review">
+        <h1 class="heading"><span>customer's</span> review</h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="src/quote-img.png" class="quote">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sapiente illum soluta ipsa non iusto
+                    laborum nesciunt corrupti consectetur vel nihil illo aperiam animi.</p>
+                <img src="src/pic-1.png" class="user">
+                <h3>john doe</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="src/quote-img.png" class="quote">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sapiente illum soluta ipsa non iusto
+                    laborum nesciunt corrupti consectetur vel nihil illo aperiam animi.</p>
+                <img src="src/pic-2.png" class="user">
+                <h3>nancy forger</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="src/quote-img.png" class="quote">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sapiente illum soluta ipsa non iusto
+                    laborum nesciunt corrupti consectetur vel nihil illo aperiam animi.</p>
+                <img src="src/pic-3.png" class="user">
+                <h3>steve harington</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
                 </div>
             </div>
         </div>
