Blogs section completed

--- a/index.html
+++ b/index.html
@@ -290,6 +290,46 @@
         </div>
     </section>
 
+    <!-- blog section  -->
+    <section class="blogs" id="blogs">
+        <h1 class="heading"><span>our</span> blogs</h1>
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <img src="src/blog-1.jpeg">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">tasty and refreshing coffee</a>
+                    <span>by admin / 21st may, 2021</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos omnis accusantium.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="src/blog-2.jpeg">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">tasty and refreshing coffee</a>
+                    <span>by admin / 21st may, 2021</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos omnis accusantium.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="src/blog-3.jpeg">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">tasty and refreshing coffee</a>
+                    <span>by admin / 21st may, 2021</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos omnis accusantium.</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Custom js file attached here -->
     <script src="app.js"></script>
 </body>
