--- a/index.html
+++ b/index.html
@@ -330,6 +330,18 @@
         </div>
     </section>
 
+    <!-- footer  -->
+    <footer>
+        <div class="share">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+            <a href="#" class="fab fa-pinterest"></a>
+        </div>
+        <div class="credits">created by <span>AishwaryaAtWork</span> | all rights reserved</div>
+    </footer>
+
     <!-- Custom js file attached here -->
     <script src="app.js"></script>
 </body>
